change links to sapmle demos

--- a/_includes/sidelist-programming/programming-javascript.html
+++ b/_includes/sidelist-programming/programming-javascript.html
@@ -21,91 +21,124 @@
   <ul>
     <li>
       <a
-        href="{{ site.js }}samples-demos/helloworld-index.html"
-        class="otherLinkColour"
+        target="_blank"
+        href="https://github.com/Dynamsoft/barcode-reader-javascript-samples/tree/main/1.hello-world"
+        class="otherLinkColour refreshLink"
         >Hello World</a
       >
       <ul>
         <li>
           <a
-            href="{{ site.js }}samples-demos/helloworld-minCode.html"
-            class="otherLinkColour"
+            target="_blank"
+            href="https://github.com/Dynamsoft/barcode-reader-javascript-samples/blob/_dev/1.hello-world/1.hello-world.html"
+            class="otherLinkColour refreshLink"
             >Minimal Code</a
+          >
+          <a
+            target="_blank"
+            href="https://demo.dynamsoft.com/Samples/DBR/JS/1.hello-world/1.hello-world.html"
+            class="otherLinkColour refreshLink"
+            >Run it&nearrow;</a
           >
         </li>
         <li>
           <a
-            href="{{ site.js }}samples-demos/helloworld-angular.html"
-            class="otherLinkColour"
+            target="_blank"
+            href="https://github.com/Dynamsoft/barcode-reader-javascript-samples/tree/_dev/1.hello-world/3.read-video-angular"
+            class="otherLinkColour refreshLink"
             >Hello World with Angular</a
           >
         </li>
         <li>
           <a
-            href="{{ site.js }}samples-demos/helloworld-reactjs.html"
-            class="otherLinkColour"
+            target="_blank"
+            href="https://github.com/Dynamsoft/barcode-reader-javascript-samples/tree/_dev/1.hello-world/4.read-video-react"
+            class="otherLinkColour refreshLink"
             >Hello World with React</a
           >
         </li>
         <li>
           <a
-            href="{{ site.js }}samples-demos/helloworld-vuejs.html"
-            class="otherLinkColour"
+            target="_blank"
+            href="https://github.com/Dynamsoft/barcode-reader-javascript-samples/tree/_dev/1.hello-world/5.read-video-vue"
+            class="otherLinkColour refreshLink"
             >Hello World with Vue 2</a
           >
         </li>
         <li>
           <a
-            href="{{ site.js }}samples-demos/helloworld-vuejsv3.html"
-            class="otherLinkColour"
+            target="_blank"
+            href="https://github.com/Dynamsoft/barcode-reader-javascript-samples/tree/_dev/1.hello-world/6.read-video-vue3"
+            class="otherLinkColour refreshLink"
             >Hello World with Vue 3</a
           >
         </li>
         <li>
           <a
-            href="{{ site.js }}samples-demos/helloworld-nextjs.html"
-            class="otherLinkColour"
+            target="_blank"
+            href="https://github.com/Dynamsoft/barcode-reader-javascript-samples/tree/_dev/1.hello-world/7.read-video-nextjs"
+            class="otherLinkColour refreshLink"
             >Hello World with Next.js</a
           >
         </li>
         <li>
           <a
-            href="{{ site.js }}samples-demos/helloworld-nuxtjs.html"
-            class="otherLinkColour"
+            target="_blank"
+            href="https://github.com/Dynamsoft/barcode-reader-javascript-samples/tree/_dev/1.hello-world/8.read-video-nuxtjs"
+            class="otherLinkColour refreshLink"
             >Hello World with NuxtJS</a
           >
         </li>
         <li>
           <a
-            href="{{ site.js }}samples-demos/helloworld-electron.html"
-            class="otherLinkColour"
+            target="_blank"
+            href="https://github.com/Dynamsoft/barcode-reader-javascript-samples/tree/_dev/1.hello-world/9.read-video-electron"
+            class="otherLinkColour refreshLink"
             >Hello World with Electron</a
           >
         </li>
         <li>
           <a
-            href="{{ site.js }}samples-demos/helloworld-pwa.html"
-            class="otherLinkColour"
+            target="_blank"
+            href="https://github.com/Dynamsoft/barcode-reader-javascript-samples/tree/_dev/1.hello-world/10.read-video-pwa"
+            class="otherLinkColour refreshLink"
             >Hello World with PWA</a
           >
         </li>
       </ul>
     </li>
     <li>
-      <a href="{{ site.js }}samples-demos/ui-customization.html">
+      <a
+        target="_blank"
+        href="https://github.com/Dynamsoft/barcode-reader-javascript-samples/tree/_dev/2.ui-tweaking"
+        class="otherLinkColour refreshLink"
+      >
         UI Customization
       </a>
     </li>
     <li>
-      <a href="{{ site.js }}samples-demos/parameter-settings.html"
+      <a
+        target="_blank"
+        href="https://github.com/Dynamsoft/barcode-reader-javascript-samples/tree/_dev/3.settings"
+        class="otherLinkColour refreshLink"
         >Parameter Settings</a
       >
     </li>
     <li>
-      <a href="{{ site.js }}samples-demos/use-cases.html">Use Cases</a>
+      <a
+        target="_blank"
+        href="https://github.com/Dynamsoft/barcode-reader-javascript-samples/tree/_dev/4.use-case"
+        class="otherLinkColour refreshLink"
+        >Use Cases</a
+      >
     </li>
     <li>
-      <a href="{{ site.js }}samples-demos/debug.html">Debug Sample</a>
+      <a
+        target="_blank"
+        href="https://github.com/Dynamsoft/barcode-reader-javascript-samples/tree/_dev/5.others/debug"
+        class="otherLinkColour refreshLink"
+        >Debug Sample</a
+      >
     </li>
     <li>
       <a
