--- a/_includes/sidelist-programming/programming-javascript.html
+++ b/_includes/sidelist-programming/programming-javascript.html
@@ -32,13 +32,7 @@
             target="_blank"
             href="https://github.com/Dynamsoft/barcode-reader-javascript-samples/blob/_dev/1.hello-world/1.hello-world.html"
             class="otherLinkColour refreshLink"
-            >Minimal Code</a
-          >
-          <a
-            target="_blank"
-            href="https://demo.dynamsoft.com/Samples/DBR/JS/1.hello-world/1.hello-world.html"
-            class="otherLinkColour refreshLink"
-            >Run it&nearrow;</a
+            >Minimal Code&nearrow;</a
           >
         </li>
         <li>
