--- a/_includes/sidelist-programming/programming-javascript.html
+++ b/_includes/sidelist-programming/programming-javascript.html
@@ -22,7 +22,7 @@
     <li>
       <a
         target="_blank"
-        href="https://github.com/Dynamsoft/barcode-reader-javascript-samples/tree/main/1.hello-world"
+        href="https://github.com/Dynamsoft/barcode-reader-javascript-samples/tree/main/hello-world/"
         class="otherLinkColour refreshLink"
         >Hello World</a
       >
@@ -30,7 +30,7 @@
         <li>
           <a
             target="_blank"
-            href="https://github.com/Dynamsoft/barcode-reader-javascript-samples/blob/_dev/1.hello-world/1.hello-world.html"
+            href="https://github.com/Dynamsoft/barcode-reader-javascript-samples/blob/main/hello-world/hello-world.html"
             class="otherLinkColour refreshLink"
             >Minimal Code&nearrow;</a
           >
@@ -38,7 +38,7 @@
         <li>
           <a
             target="_blank"
-            href="https://github.com/Dynamsoft/barcode-reader-javascript-samples/tree/_dev/1.hello-world/3.read-video-angular"
+            href="https://github.com/Dynamsoft/barcode-reader-javascript-samples/tree/main/hello-world/angular"
             class="otherLinkColour refreshLink"
             >Hello World with Angular</a
           >
@@ -46,7 +46,7 @@
         <li>
           <a
             target="_blank"
-            href="https://github.com/Dynamsoft/barcode-reader-javascript-samples/tree/_dev/1.hello-world/4.read-video-react"
+            href="https://github.com/Dynamsoft/barcode-reader-javascript-samples/tree/main/hello-world/react"
             class="otherLinkColour refreshLink"
             >Hello World with React</a
           >
@@ -54,15 +54,7 @@
         <li>
           <a
             target="_blank"
-            href="https://github.com/Dynamsoft/barcode-reader-javascript-samples/tree/_dev/1.hello-world/5.read-video-vue"
-            class="otherLinkColour refreshLink"
-            >Hello World with Vue 2</a
-          >
-        </li>
-        <li>
-          <a
-            target="_blank"
-            href="https://github.com/Dynamsoft/barcode-reader-javascript-samples/tree/_dev/1.hello-world/6.read-video-vue3"
+            href="https://github.com/Dynamsoft/barcode-reader-javascript-samples/tree/main/hello-world/vue3"
             class="otherLinkColour refreshLink"
             >Hello World with Vue 3</a
           >
@@ -70,7 +62,7 @@
         <li>
           <a
             target="_blank"
-            href="https://github.com/Dynamsoft/barcode-reader-javascript-samples/tree/_dev/1.hello-world/7.read-video-nextjs"
+            href="https://github.com/Dynamsoft/barcode-reader-javascript-samples/tree/main/hello-world/next"
             class="otherLinkColour refreshLink"
             >Hello World with Next.js</a
           >
@@ -78,7 +70,7 @@
         <li>
           <a
             target="_blank"
-            href="https://github.com/Dynamsoft/barcode-reader-javascript-samples/tree/_dev/1.hello-world/8.read-video-nuxtjs"
+            href="https://github.com/Dynamsoft/barcode-reader-javascript-samples/tree/main/hello-world/nuxt"
             class="otherLinkColour refreshLink"
             >Hello World with NuxtJS</a
           >
@@ -86,7 +78,7 @@
         <li>
           <a
             target="_blank"
-            href="https://github.com/Dynamsoft/barcode-reader-javascript-samples/tree/_dev/1.hello-world/9.read-video-electron"
+            href="https://github.com/Dynamsoft/barcode-reader-javascript-samples/tree/main/hello-world/electron"
             class="otherLinkColour refreshLink"
             >Hello World with Electron</a
           >
@@ -94,7 +86,7 @@
         <li>
           <a
             target="_blank"
-            href="https://github.com/Dynamsoft/barcode-reader-javascript-samples/tree/_dev/1.hello-world/10.read-video-pwa"
+            href="https://github.com/Dynamsoft/barcode-reader-javascript-samples/tree/main/hello-world/pwa"
             class="otherLinkColour refreshLink"
             >Hello World with PWA</a
           >
@@ -104,24 +96,7 @@
     <li>
       <a
         target="_blank"
-        href="https://github.com/Dynamsoft/barcode-reader-javascript-samples/tree/_dev/2.ui-tweaking"
-        class="otherLinkColour refreshLink"
-      >
-        UI Customization
-      </a>
-    </li>
-    <li>
-      <a
-        target="_blank"
-        href="https://github.com/Dynamsoft/barcode-reader-javascript-samples/tree/_dev/3.settings"
-        class="otherLinkColour refreshLink"
-        >Parameter Settings</a
-      >
-    </li>
-    <li>
-      <a
-        target="_blank"
-        href="https://github.com/Dynamsoft/barcode-reader-javascript-samples/tree/_dev/4.use-case"
+        href="https://github.com/Dynamsoft/barcode-reader-javascript-samples/tree/main/use-case"
         class="otherLinkColour refreshLink"
         >Use Cases</a
       >
@@ -129,7 +104,7 @@
     <li>
       <a
         target="_blank"
-        href="https://github.com/Dynamsoft/barcode-reader-javascript-samples/tree/_dev/5.others/debug"
+        href="https://github.com/Dynamsoft/barcode-reader-javascript-samples/tree/main/others/debug"
         class="otherLinkColour refreshLink"
         >Debug Sample</a
       >
