update sample links

--- a/_includes/sidelist-programming/programming-javascript.html
+++ b/_includes/sidelist-programming/programming-javascript.html
@@ -22,7 +22,7 @@
     <li>
       <a
         target="_blank"
-        href="https://github.com/Dynamsoft/barcode-reader-javascript-samples/tree/main/hello-world/"
+        href="https://github.com/Dynamsoft/barcode-reader-javascript-samples/tree/v10.0.20/hello-world/"
         class="otherLinkColour refreshLink"
         >Hello World</a
       >
@@ -30,7 +30,7 @@
         <li>
           <a
             target="_blank"
-            href="https://github.com/Dynamsoft/barcode-reader-javascript-samples/blob/main/hello-world/hello-world.html"
+            href="https://github.com/Dynamsoft/barcode-reader-javascript-samples/blob/v10.0.20/hello-world/hello-world.html"
             class="otherLinkColour refreshLink"
             >Minimal Code&nearrow;</a
           >
@@ -38,7 +38,7 @@
         <li>
           <a
             target="_blank"
-            href="https://github.com/Dynamsoft/barcode-reader-javascript-samples/tree/main/hello-world/angular"
+            href="https://github.com/Dynamsoft/barcode-reader-javascript-samples/tree/v10.0.20/hello-world/angular"
             class="otherLinkColour refreshLink"
             >Hello World with Angular</a
           >
@@ -46,7 +46,7 @@
         <li>
           <a
             target="_blank"
-            href="https://github.com/Dynamsoft/barcode-reader-javascript-samples/tree/main/hello-world/react"
+            href="https://github.com/Dynamsoft/barcode-reader-javascript-samples/tree/v10.0.20/hello-world/react"
             class="otherLinkColour refreshLink"
             >Hello World with React</a
           >
@@ -54,7 +54,7 @@
         <li>
           <a
             target="_blank"
-            href="https://github.com/Dynamsoft/barcode-reader-javascript-samples/tree/main/hello-world/vue3"
+            href="https://github.com/Dynamsoft/barcode-reader-javascript-samples/tree/v10.0.20/hello-world/vue3"
             class="otherLinkColour refreshLink"
             >Hello World with Vue 3</a
           >
@@ -62,7 +62,7 @@
         <li>
           <a
             target="_blank"
-            href="https://github.com/Dynamsoft/barcode-reader-javascript-samples/tree/main/hello-world/next"
+            href="https://github.com/Dynamsoft/barcode-reader-javascript-samples/tree/v10.0.20/hello-world/next"
             class="otherLinkColour refreshLink"
             >Hello World with Next.js</a
           >
@@ -70,7 +70,7 @@
         <li>
           <a
             target="_blank"
-            href="https://github.com/Dynamsoft/barcode-reader-javascript-samples/tree/main/hello-world/nuxt"
+            href="https://github.com/Dynamsoft/barcode-reader-javascript-samples/tree/v10.0.20/hello-world/nuxt"
             class="otherLinkColour refreshLink"
             >Hello World with NuxtJS</a
           >
@@ -78,7 +78,7 @@
         <li>
           <a
             target="_blank"
-            href="https://github.com/Dynamsoft/barcode-reader-javascript-samples/tree/main/hello-world/electron"
+            href="https://github.com/Dynamsoft/barcode-reader-javascript-samples/tree/v10.0.20/hello-world/electron"
             class="otherLinkColour refreshLink"
             >Hello World with Electron</a
           >
@@ -86,7 +86,7 @@
         <li>
           <a
             target="_blank"
-            href="https://github.com/Dynamsoft/barcode-reader-javascript-samples/tree/main/hello-world/pwa"
+            href="https://github.com/Dynamsoft/barcode-reader-javascript-samples/tree/v10.0.20/hello-world/pwa"
             class="otherLinkColour refreshLink"
             >Hello World with PWA</a
           >
@@ -96,7 +96,7 @@
     <li>
       <a
         target="_blank"
-        href="https://github.com/Dynamsoft/barcode-reader-javascript-samples/tree/main/use-case"
+        href="https://github.com/Dynamsoft/barcode-reader-javascript-samples/tree/v10.0.20/use-case"
         class="otherLinkColour refreshLink"
         >Use Cases</a
       >
@@ -104,7 +104,7 @@
     <li>
       <a
         target="_blank"
-        href="https://github.com/Dynamsoft/barcode-reader-javascript-samples/tree/main/others/debug"
+        href="https://github.com/Dynamsoft/barcode-reader-javascript-samples/tree/v10.0.20/others/debug"
         class="otherLinkColour refreshLink"
         >Debug Sample</a
       >
@@ -114,7 +114,7 @@
         target="_blank"
         href="https://demo.dynamsoft.com/barcode-reader-js/"
         class="otherLinkColour refreshLink"
-        >Main Demo &nearrow;</a
+        >v10.0.20 Demo &nearrow;</a
       >
     </li>
   </ul>
