--- a/_includes/dbrNav.html
+++ b/_includes/dbrNav.html
@@ -1,16 +1,16 @@
 <style>
-    #cp-header .action-buttons { display: none; }
-    #mdHeader { border-bottom: 0!important; }
-    #sideBarCnt.sidebar-fixed { position: fixed; top: 88px; max-height: unset; }
-    .rightSideMenu.rsm-fixed { position: fixed; top: 100px; }
-    #docHead { top: 151px; }
-    .productMenu .downloadBtn:hover { color: #ffffff!important; }
-    @media (max-width: 1679px){
-      #docHead {
-        top: 145px;
-      }
+#cp-header .action-buttons { display: none; }
+#mdHeader { border-bottom: 0!important; }
+#sideBarCnt.sidebar-fixed { position: fixed; top: 88px; max-height: unset; }
+.rightSideMenu.rsm-fixed { position: fixed; top: 100px; }
+#docHead { top: 151px; }
+.productMenu .downloadBtn:hover { color: #ffffff!important; }
+@media (max-width: 1679px){
+    #docHead {
+    top: 145px;
     }
-  </style>
+}
+</style>
 
 <div id="BarcodeReader" class="main">
     <div id="BarcodeReaderMenu" class="productMenu">
@@ -23,7 +23,7 @@
                             <a class="textUpperCase" href="https://www.dynamsoft.com/barcode-reader/overview/">Overview</a>
                         </li>
                         <li class="item features">
-                            <a class="textUpperCase" href="https://www.dynamsoft.com/barcode-reader/features">Features</a>
+                            <a class="textUpperCase" href="https://www.dynamsoft.com/barcode-reader/features/">Features</a>
                         </li>
                         <li class="item">
                             <span class="showMenuMore textUpperCase">Languages <i class="icon-orange-angle"></i></span>
@@ -38,15 +38,26 @@
                             <span class="showMenuMore textUpperCase">Dev Center  <i class="icon-orange-angle"></i></span>
                             <ul class="ct-more" style="display: none">
                                 <i class="icon-orange-angle"></i>
-                                <li class="item"><a href="https://www.dynamsoft.com/barcode-reader/introduction/">Documentation</a></li>
+                                <li class="item"><a href="https://www.dynamsoft.com/barcode-reader/docs/core/introduction/">Documentation</a></li>
                                 <li class="item"><a href="https://www.dynamsoft.com/barcode-reader/resources/code-gallery/">Code Gallery</a></li>
-                                <li class="item"><a href="https://www.dynamsoft.com/barcode-reader/release-notes/">Release Notes</a></li>
+                                <li class="item"><a href="https://www.dynamsoft.com/barcode-reader/docs/core/release-notes/">Release Notes</a></li>
                                 <li class="item"><a class="all-resources f16 mt20 orangeLink" href="https://www.dynamsoft.com/barcode-reader/resources/">See All resources ></a></li>
                             </ul>
                         </li>
-                        <li class="item textUpperCase buy"><a href="https://www.dynamsoft.com/store/dynamsoft-barcode-reader">Buy</a></li>
+                        <li class="item textUpperCase buy"><a href="https://www.dynamsoft.com/store/dynamsoft-barcode-reader/">Buy</a></li>
                     </ul>
-                    <a class="downloadBtn fr hide-lg textUpperCase" href="https://www.dynamsoft.com/barcode-reader/downloads">Download Free Trial</a>
+                    <a class="downloadBtn fr hide-lg textUpperCase" href="https://www.dynamsoft.com/barcode-reader/downloads/">Download<span> Free Trial</span></a>
+                    <div class="languageWrap" style="display: none;">
+                        <label class="title">Language: </label>
+                        <div class="languageChange">
+                            <label class="chosenLanguage">Swift</label>
+                            <i class="fa fa-angle-down"></i>
+                        </div>
+                        <div class="languageSelectDown">
+                            <div data-value="swift" class="on">Swift</div>
+                            <div data-value="objc">Objective-C</div>
+                        </div>
+                    </div>
                 </div>
             </div>
         </div>
@@ -55,6 +66,17 @@
                 <div class="col-xs-12">
                     <div class="productLogo"><i class="dbr-logo"></i> <i class="icon-orange-angle"></i></div>
                     <div id="dbrCurrentPage" class="fontOswald fr currentPage">Dev Center</div>
+                    <div class="languageWrap" style="display: none;">
+                        <label class="title">Language: </label>
+                        <div class="languageChange">
+                            <label class="chosenLanguage">Swift</label>
+                            <i class="fa fa-angle-down"></i>
+                        </div>
+                        <div class="languageSelectDown">
+                            <div data-value="swift" class="on">Swift</div>
+                            <div data-value="objc">Objective-C</div>
+                        </div>
+                    </div>
                 </div>
             </div>
         </div>
@@ -65,7 +87,7 @@
                         <ul class="menuList">
                             <li class="item"><a href="https://www.dynamsoft.com/barcode-reader/overview/">Overview</a></li>
                             <li class="item features">
-                                <a class="textUpperCase" href="https://www.dynamsoft.com/barcode-reader/features">Features</a>
+                                <a class="textUpperCase" href="https://www.dynamsoft.com/barcode-reader/features/">Features</a>
                             </li>
                             <li class="item">
                                 <span class="showMenuMore textUpperCase">Languages <i class="icon-orange-angle"></i></span>
@@ -78,14 +100,14 @@
                             <li class="item resources">
                                 <span class="showMenuMore textUpperCase">Dev Center  <i class="icon-orange-angle"></i></span>
                                 <ul class="ct-more" style="display: none">
-                                    <li class="item"><a href="https://www.dynamsoft.com/barcode-reader/introduction/">Documentation</a></li>
+                                    <li class="item"><a href="https://www.dynamsoft.com/barcode-reader/docs/core/introduction/">Documentation</a></li>
                                     <li class="item"><a href="https://www.dynamsoft.com/barcode-reader/resources/code-gallery/">Code Gallery</a></li>
-                                    <li class="item"><a href="https://www.dynamsoft.com/barcode-reader/release-notes/">Release Notes</a></li>
+                                    <li class="item"><a href="https://www.dynamsoft.com/barcode-reader/docs/core/release-notes/">Release Notes</a></li>
                                     <li class="item"><a class="all-resources f16 mt20 orangeLink" href="https://www.dynamsoft.com/barcode-reader/resources/">See All resources ></a></li>
                                 </ul>
                             </li>
-                            <li class="item textUpperCase"><a id="DBRBuyBtn" href="https://www.dynamsoft.com/store/dynamsoft-barcode-reader">Buy</a></li>
-                            <li class="item textUpperCase"><a class="orangeLink" href="https://www.dynamsoft.com/barcode-reader/downloads">30-day free trial</a></li>
+                            <li class="item textUpperCase"><a id="DBRBuyBtn" href="https://www.dynamsoft.com/store/dynamsoft-barcode-reader/">Buy</a></li>
+                            <li class="item textUpperCase"><a class="orangeLink" href="https://www.dynamsoft.com/barcode-reader/downloads/">30-day free trial</a></li>
                         </ul>
                     </div>
                 </div>
