--- a/_includes/sidelist-programming/programming-javascript-v9.6.31.html
+++ b/_includes/sidelist-programming/programming-javascript-v9.6.31.html
@@ -388,6 +388,9 @@
         <li>
             <a href="{{ site.js }}faq/check-camera.html">How to check the camera permissions programmatically in Dynamsoft Barcode Reader JavaScript SDK?</a>
         </li>
+        <li>
+            <a href="{{ site.js }}faq/ios-17-readability.html">How do I resolve the issue of the Barcode Reader not recognizing any barcodes via video in iOS 16.7 or 17?</a>
+        </li>
     </ul>
 </li>
 <li class="category">OTHERS</li>
