--- a/_includes/sidelist-programming/programming-javascript.html
+++ b/_includes/sidelist-programming/programming-javascript.html
@@ -54,7 +54,7 @@
         <li>
           <a
             target="_blank"
-            href="https://github.com/Dynamsoft/barcode-reader-javascript-samples/tree/v10.0.20/hello-world/vue3"
+            href="https://github.com/Dynamsoft/barcode-reader-javascript-samples/tree/v10.0.20/hello-world/vue"
             class="otherLinkColour refreshLink"
             >Hello World with Vue 3</a
           >
