move crr irr crf from core to cvr

--- a/_includes/sidelist-programming/programming-javascript.html
+++ b/_includes/sidelist-programming/programming-javascript.html
@@ -183,6 +183,13 @@
             >Settings</a
           >
         </li>
+        <li lang="javascript"><a style="cursor:pointer;color:#3c3c3c">Output handling</a>
+          <ul>
+              <li lang="javascript"><a href="{{ site.dcv_js_api }}capture-vision-router/interfaces/captured-result-receiver.html" class="otherLinkColour">CapturedResultReceiver</a></li>
+              <li lang="javascript"><a href="{{ site.dcv_js_api }}capture-vision-router/interfaces/intermediate-result-receiver.html" class="otherLinkColour">IntermediateResultReceiver</a></li>
+              <li lang="javascript"><a href="{{ site.dcv_js_api }}capture-vision-router/interfaces/captured-result-filter.html" class="otherLinkColour">CapturedResultFilter</a></li>
+          </ul>
+        </li>
         <!--<li lang="javascript"><a href="{{ site.dcv_js_api }}capture-vision-router/intermediate-result.html"  class="otherLinkColour">Intermediate Result</a></li>-->
       </ul>
     </li>
@@ -437,7 +444,7 @@
             </li>
             <li lang="javascript">
               <a
-                href="{{ site.dcv_js_api }}core/intermediate-results/intermediate-result-receiver.html"
+                href="{{ site.dcv_js_api }}capture-vision-router/interfaces/intermediate-result-receiver.html"
                 class="otherLinkColour"
                 >IntermediateResultReceiver</a
               >
@@ -582,7 +589,7 @@
             </li>
             <li lang="javascript">
               <a
-                href="{{ site.dcv_js_api }}core/basic-structures/captured-result-filter.html"
+                href="{{ site.dcv_js_api }}capture-vision-router/interfaces/captured-result-filter.html"
                 class="otherLinkColour"
                 >CapturedResultFilter</a
               >
@@ -597,7 +604,7 @@
             </li>
             <li lang="javascript">
               <a
-                href="{{ site.dcv_js_api }}core/basic-structures/captured-result-receiver.html"
+                href="{{ site.dcv_js_api }}capture-vision-router/interfaces/captured-result-receiver.html"
                 class="otherLinkColour"
                 >CapturedResultReceiver</a
               >
