add module class to the menu

--- a/_includes/sidelist-programming/programming-javascript.html
+++ b/_includes/sidelist-programming/programming-javascript.html
@@ -128,9 +128,16 @@
       <a
         href="{{ site.js_api }}barcode-reader-module.html"
         class="otherLinkColour"
-        >BarcodeReaderModule</a
+        >BarcodeReader</a
       >
       <ul>
+        <li>
+          <a
+            href="{{ site.js_api }}barcode-reader-module-class.html"
+            class="otherLinkColour"
+            >BarcodeReaderModule</a
+          >
+        </li>
         <li>
           <a class="otherLinkColour">Interfaces</a>
           <ul>
