fix a wrong style issue

--- a/_includes/sidelist-programming/programming-javascript.html
+++ b/_includes/sidelist-programming/programming-javascript.html
@@ -394,5 +394,5 @@
     </ul>
 </li>
 <li class="category">OTHERS</li>
-<li><a target="_blank" href="{{ site.introduction }}index.html#user-guides" class="otherLinkColour refreshLink">Develop
+<li><a target="_blank" href="{{ site.introduction }}index.html" class="otherLinkColour refreshLink">Develop
                 for Mobile or Server/Desktop</a></li>
