--- a/_includes/sidelist-programming/programming-javascript.html
+++ b/_includes/sidelist-programming/programming-javascript.html
@@ -124,6 +124,121 @@
     >API Reference</a
   >
   <ul lang="javascript">
+    <!-- CVR -->
+    <li>
+      <a
+        href="{{ site.dcv_js_api }}capture-vision-router/capture-vision-router-module.html"
+        class="otherLinkColour"
+        >DynamsoftCaptureVisionRouter</a
+      >
+      <ul>
+        <li>
+          <a class="otherLinkColour">CaptureVisionRouter</a>
+          <ul>
+            <li>
+              <a
+                href="{{ site.dcv_js_api }}capture-vision-router/instantiate.html"
+                class="otherLinkColour"
+                >Create and Destroy Instances</a
+              >
+            </li>
+            <li>
+              <a
+                href="{{ site.dcv_js_api }}capture-vision-router/single-image-processing.html"
+                class="otherLinkColour"
+                >Single-Image Processing</a
+              >
+            </li>
+            <li>
+              <a
+                href="{{ site.dcv_js_api }}capture-vision-router/multiple-image-processing.html"
+                class="otherLinkColour"
+                >Multiple-Image Processing</a
+              >
+            </li>
+            <li>
+              <a
+                href="{{ site.dcv_js_api }}capture-vision-router/settings.html"
+                class="otherLinkColour"
+                >Settings</a
+              >
+            </li>
+            <li>
+              <a
+                href="{{ site.dcv_js_api }}capture-vision-router/intermediate-result.html"
+                class="otherLinkColour"
+                >Intermediate Result</a
+              >
+            </li>
+          </ul>
+        </li>
+        <li>
+          <a>Classes</a>
+          <ul>
+            <li>
+              <a
+                href="{{ site.dcv_js_api }}capture-vision-router/capture-vision-router-module-class.html"
+                class="otherLinkColour"
+                >CaptureVisionRouterModule</a
+              >
+            </li>
+            <li>
+              <a
+                href="{{ site.dcv_js_api }}capture-vision-router/captured-result-receiver.html"
+                class="otherLinkColour"
+                >CapturedResultReceiver</a
+              >
+            </li>
+            <li>
+              <a
+                href="{{ site.dcv_js_api }}capture-vision-router/intermediate-result-manager.html"
+                class="otherLinkColour"
+                >IntermediateResultManager</a
+              >
+            </li>
+            <li>
+              <a
+                href="{{ site.dcv_js_api }}capture-vision-router/intermediate-result-receiver.html"
+                class="otherLinkColour"
+                >IntermediateResultReceiver</a
+              >
+            </li>
+          </ul>
+        </li>
+        <li>
+          <a class="otherLinkColour">Interfaces</a>
+          <ul>
+            <!-- <li>
+              <a
+                href="{{ site.dcv_js_api }}capture-vision-router/interfaces/image-source-state-listener.html"
+                class="otherLinkColour"
+                >ImageSourceStateListener</a
+              >
+            </li> -->
+            <li>
+              <a
+                href="{{ site.dcv_js_api }}capture-vision-router/interfaces/simplified-capture-vision-settings.html"
+                class="otherLinkColour"
+                >SimplifiedCaptureVisionSettings</a
+              >
+            </li>
+          </ul>
+        </li>
+        <li>
+          <a class="otherLinkColour">Enums</a>
+          <ul>
+            <li>
+              <a
+                href="{{ site.enums }}core/image-source-state.html?lang=js"
+                class="otherLinkColour"
+                >EnumImageSourceState</a
+              >
+            </li>
+          </ul>
+        </li>
+      </ul>
+    </li>
+    <!-- DBR -->
     <li lang="javascript">
       <a
         href="{{ site.js_api }}barcode-reader-module.html"
@@ -323,122 +438,6 @@
                 href="{{ site.dcv_enumerations }}barcode-reader/extended-barcode-result-type.html?lang=js"
                 class="otherLinkColour"
                 >EnumExtendedBarcodeResultType</a
-              >
-            </li>
-          </ul>
-        </li>
-      </ul>
-    </li>
-    <!-- CVR -->
-    <li>
-      <a
-        href="{{ site.dcv_js_api }}capture-vision-router/capture-vision-router-module.html"
-        class="otherLinkColour"
-        >CaptureVisionRouter</a
-      >
-      <ul>
-        <li>
-          <a
-            href="{{ site.dcv_js_api }}capture-vision-router/capture-vision-router-module-class.html"
-            class="otherLinkColour"
-            >CaptureVisionRouterModule</a
-          >
-        </li>
-        <li>
-          <a class="otherLinkColour">CaptureVisionRouter</a>
-          <ul>
-            <li>
-              <a
-                href="{{ site.dcv_js_api }}capture-vision-router/instantiate.html"
-                class="otherLinkColour"
-                >Create and Destroy Instances</a
-              >
-            </li>
-            <li>
-              <a
-                href="{{ site.dcv_js_api }}capture-vision-router/single-image-processing.html"
-                class="otherLinkColour"
-                >Single-Image Processing</a
-              >
-            </li>
-            <li>
-              <a
-                href="{{ site.dcv_js_api }}capture-vision-router/multiple-image-processing.html"
-                class="otherLinkColour"
-                >Multiple-Image Processing</a
-              >
-            </li>
-            <li>
-              <a
-                href="{{ site.dcv_js_api }}capture-vision-router/settings.html"
-                class="otherLinkColour"
-                >Settings</a
-              >
-            </li>
-            <li>
-              <a
-                href="{{ site.dcv_js_api }}capture-vision-router/intermediate-result.html"
-                class="otherLinkColour"
-                >Intermediate Result</a
-              >
-            </li>
-          </ul>
-        </li>
-        <li>
-          <a
-            href="{{ site.dcv_js_api }}capture-vision-router/intermediate-result-manager.html"
-            class="otherLinkColour"
-            >IntermediateResultManager</a
-          >
-        </li>
-        <li>
-          <a class="otherLinkColour">Interfaces</a>
-          <ul>
-            <li>
-              <a
-                href="{{ site.dcv_js_api }}capture-vision-router/interfaces/captured-result-filter.html"
-                class="otherLinkColour"
-                >CapturedResultFilter</a
-              >
-            </li>
-            <li>
-              <a
-                href="{{ site.dcv_js_api }}capture-vision-router/interfaces/captured-result-receiver.html"
-                class="otherLinkColour"
-                >CapturedResultReceiver</a
-              >
-            </li>
-            <li>
-              <a
-                href="{{ site.dcv_js_api }}capture-vision-router/interfaces/intermediate-result-receiver.html"
-                class="otherLinkColour"
-                >IntermediateResultReceiver</a
-              >
-            </li>
-            <li>
-              <a
-                href="{{ site.dcv_js_api }}capture-vision-router/interfaces/image-source-state-listener.html"
-                class="otherLinkColour"
-                >ImageSourceStateListener</a
-              >
-            </li>
-            <li>
-              <a
-                href="{{ site.dcv_js_api }}capture-vision-router/interfaces/simplified-capture-vision-settings.html"
-                class="otherLinkColour"
-                >SimplifiedCaptureVisionSettings</a
-              >
-            </li>
-          </ul>
-        </li>
-        <li>
-          <a class="otherLinkColour">Enums</a>
-          <ul>
-            <li>
-              <a
-                href="{{ site.enums }}core/image-source-state.html?lang=js"
-                class="otherLinkColour"
-                >EnumImageSourceState</a
               >
             </li>
           </ul>
@@ -964,4 +963,227 @@
       >
     </li>
   </ul>
+</li>
+
+<li>
+  <a href="{{ site.js }}faq/" class="otherLinkColour">FAQ</a>
+  <ul>
+    <li>
+      <a href="{{ site.js }}faq/ways-to-copy-dbr-js-deployable-files.html"
+        >How to get a copy of Dbr JS deployable files ?</a
+      >
+    </li>
+    <li>
+      <a href="{{ site.js }}faq/javascript-sdk-offline-mode-use.html"
+        >How to use the JavaScript SDK in offline mode?</a
+      >
+    </li>
+    <li>
+      <a href="{{ site.js }}faq/server-requirements-for-dbr-js-deployment.html"
+        >What are the server requirements for Dbr JS deployment?</a
+      >
+    </li>
+    <li>
+      <a href="{{ site.js }}faq/pros-and-cons-of-cdn.html"
+        >What are the pros and cons of using the CDN?</a
+      >
+    </li>
+    <li>
+      <a
+        href="{{ site.js }}faq/differences-between-full-and-compact-editions.html"
+        >What are the differences between the compact edition and the full
+        edition?</a
+      >
+    </li>
+    <li>
+      <a href="{{ site.js }}faq/is-https-required.html"
+        >Is HTTPS absolutely required?</a
+      >
+    </li>
+    <li>
+      <a href="{{ site.js }}faq/use-of-onFrameRead-and-onUnduplicateRead.html"
+        >When to use onFrameRead and when to use onUniqueRead?</a
+      >
+    </li>
+    <li>
+      <a href="{{ site.js }}faq/call-loadWasm-proactively.html"
+        >Do we have to call loadWasm proactively?</a
+      >
+    </li>
+    <li>
+      <a
+        href="{{ site.js }}faq/differences-between-updateScanSettings-updateVideoSettings-and-updateRuntimeSettings.html"
+        >Differences between
+        updateScanSettings/updateVideoSettings/updateRuntimeSettings?</a
+      >
+    </li>
+    <li>
+      <a href="{{ site.js }}faq/different-ways-to-customize-ui.html"
+        >What are the different ways to customize the UI?</a
+      >
+    </li>
+    <li>
+      <a href="{{ site.js }}faq/get-sdk-logs.html"
+        >How to get the logs for the JavaScript SDK?</a
+      >
+    </li>
+    <li>
+      <a href="{{ site.js }}faq/upgrade-old-to-new.html"
+        >How do you upgrade to a newer version of the SDK?</a
+      >
+    </li>
+    <li>
+      <a href="{{ site.js }}faq/change-domain-binding-of-product-key.html"
+        >How to change the domain binding of your product key?</a
+      >
+    </li>
+    <li>
+      <a href="{{ site.js }}faq/when-singleFrameMode-is-enabled.html"
+        >When is singleFrameMode enabled?</a
+      >
+    </li>
+    <li>
+      <a href="{{ site.js }}faq/get-intermediate-result-images.html"
+        >How to get intermediate result images?</a
+      >
+    </li>
+    <li>
+      <a href="{{ site.js }}faq/read-inverted-image.html"
+        >How to read an inverted image?</a
+      >
+    </li>
+    <li>
+      <a href="{{ site.js }}faq/read-from-existing-files.html"
+        >How to read barcodes from existing files?</a
+      >
+    </li>
+    <li>
+      <a href="{{ site.js }}faq/formats-supported-for-existing-files.html"
+        >Formats supported when reading barcodes from files in local memory?</a
+      >
+    </li>
+    <li>
+      <a href="{{ site.js }}faq/read-text-from-barcode-image.html"
+        >How to read the text info usually located around a barcode image?</a
+      >
+    </li>
+    <li>
+      <a href="{{ site.js }}faq/scan-US-drivers-license.html"
+        >How to scan the barcode on a US Driver"s License and get the first
+        name, last name, DOB, etc.?</a
+      >
+    </li>
+    <li>
+      <a href="{{ site.js }}faq/add-remove-beep-sound.html"
+        >How to add/remove a "beep" sound once a barcode is found?</a
+      >
+    </li>
+    <li>
+      <a href="{{ site.js }}faq/nodejs-implementation.html"
+        >How do I create a NodeJS application using the SDK?</a
+      >
+    </li>
+    <li>
+      <a href="{{ site.js }}faq/check-current-version.html"
+        >How to check the version of the JavaScript SDK I am currently using?</a
+      >
+    </li>
+    <li>
+      <a href="{{ site.js }}faq/unable-to-scan-aztec-code.html"
+        >Why am I unable to scan an Aztec code in the helloworld sample?</a
+      >
+    </li>
+    <li>
+      <a href="{{ site.js }}faq/stop-camera-to-open-right-away.html"
+        >Enable the camera on the click of a button?</a
+      >
+    </li>
+    <li>
+      <a
+        href="{{ site.js }}faq/difference-between-barcodeReader-and-barcodeScanner.html"
+        >What is the difference between the BarcodeReader class and the
+        BarcodeScanner class?</a
+      >
+    </li>
+    <li>
+      <a href="{{ site.js }}faq/newline-character-not-being-rendered.html"
+        >Why are newline characters not being rendered when displaying the
+        barcode results in a textbox?</a
+      >
+    </li>
+    <li>
+      <a href="{{ site.js }}faq/resolve-magic-word.html"
+        >How to resolve the expected magic word error that occurs when using the
+        JavaScript SDK?</a
+      >
+    </li>
+    <li>
+      <a
+        href="{{ site.js }}faq/general-troubleshooting-steps-for-decode-failure.html"
+        >What are the general troubleshooting steps if an image fails to decode
+        with the JavaScript SDK?</a
+      >
+    </li>
+    <li>
+      <a
+        href="{{ site.js }}faq/difference-between-bestspeed-and-bestcoverage.html"
+        >What are the differences between the "speed", "coverage", "balance, and
+        "single" runtime templates?</a
+      >
+    </li>
+    <li>
+      <a href="{{ site.js }}faq/avoid-incorrect-barcode-results.html"
+        >How to avoid incorrect barcode results?</a
+      >
+    </li>
+    <li>
+      <a href="{{ site.js }}faq/how-license-tracking-works.html"
+        >How does the license work - Per Scan, Per Device, Per Concurrent
+        Device?</a
+      >
+    </li>
+    <li>
+      <a href="{{ site.js }}faq/new-license-required-per-device-licensing.html"
+        >When is a new license spot taken when using a per-device licensing
+        model?</a
+      >
+    </li>
+    <li>
+      <a href="{{ site.js }}faq/delay-when-open-camera.html"
+        >How to get rid of the delay when opening the camera?</a
+      >
+    </li>
+    <li>
+      <a href="{{ site.js }}faq/hide-laser-message-ui.html"
+        >How can I hide the laser bar and Dynamsoft message in the default UI of
+        the BarcodeScanner?</a
+      >
+    </li>
+    <li>
+      <a href="{{ site.js }}faq/ios-16-incompatible.html"
+        >Why is the Javascript SDK not recognizing any barcodes on iOS 16.4?</a
+      >
+    </li>
+    <li>
+      <a href="{{ site.js }}faq/check-camera.html"
+        >How to check the camera permissions programmatically in Dynamsoft
+        Barcode Reader JavaScript SDK?</a
+      >
+    </li>
+    <li>
+      <a href="{{ site.js }}faq/ios-17-readability.html"
+        >How do I resolve the issue of the Barcode Reader not recognizing any
+        barcodes via video in iOS 16.7 or 17?</a
+      >
+    </li>
+  </ul>
+</li>
+<li class="category">OTHERS</li>
+<li>
+  <a
+    target="_blank"
+    href="{{ site.introduction }}index.html"
+    class="otherLinkColour refreshLink"
+    >Develop for Mobile or Server/Desktop</a
+  >
 </li>
