update to internal commit cbbe87ee

--- a/_includes/sidelist-programming/programming-javascript.html
+++ b/_includes/sidelist-programming/programming-javascript.html
@@ -243,7 +243,7 @@
       <a
         href="{{ site.js_api }}barcode-reader-module.html"
         class="otherLinkColour"
-        >BarcodeReader</a
+        >DynamsoftBarcodeReader</a
       >
       <ul>
         <li>
@@ -449,7 +449,7 @@
       <a
         href="{{ site.dcv_js_api }}license/license-module.html"
         class="otherLinkColour"
-        >License</a
+        >DynamsoftLicense</a
       >
       <ul>
         <li>
@@ -473,7 +473,7 @@
       <a
         href="{{ site.dcv_js_api }}utility/utility-module.html"
         class="otherLinkColour"
-        >Utility</a
+        >DynamsoftUtility</a
       >
       <ul>
         <li>
@@ -504,7 +504,7 @@
       <a
         href="{{ site.dcv_js_api }}core/core-module.html"
         class="otherLinkColour"
-        >Core</a
+        >DynamsoftCore</a
       >
       <ul>
         <li>
