--- a/_includes/sidelist-programming/programming-javascript-v9.6.33.html
+++ b/_includes/sidelist-programming/programming-javascript-v9.6.33.html
@@ -212,7 +212,7 @@
 <li><a href="{{ site.js }}upgrade-guide/index.html" style="cursor:pointer;color:#3c3c3c">Upgrade Instructions</a>
     <ul>
         <li><a href="{{ site.js }}upgrade-guide/7-notice.html" class="otherLinkColour">EOS for v7.x</a></li>
-        <li><a href="{{ site.js }}upgrade-guide/index.html" class="otherLinkColour">Upgrade v8 to v9</a></li>
+        <li><a href="{{ site.js }}upgrade-guide/8to9.html" class="otherLinkColour">Upgrade v8 to v9</a></li>
         <li><a href="{{ site.js }}upgrade-guide/7to9.html" class="otherLinkColour">Upgrade v7 to v9</a></li>
     </ul>
 </li>
