update to internal commit 5e46bd65

--- a/_includes/sidelist-programming/programming-javascript.html
+++ b/_includes/sidelist-programming/programming-javascript.html
@@ -272,6 +272,13 @@
             </li>
             <li>
               <a
+                href="{{ site.js_api }}interfaces/barcode-result-item.html"
+                class="otherLinkColour"
+                >BarcodeResultItem</a
+              >
+            </li>
+            <li>
+              <a
                 href="{{ site.js_api }}interfaces/candidate-barcode-zones-unit.html"
                 class="otherLinkColour"
                 >CandidateBarcodeZonesUnit</a
@@ -651,13 +658,13 @@
                 >LineSegment</a
               >
             </li>
-            <li>
+            <!-- <li>
               <a
                 href="{{ site.dcv_js_api }}core/intermediate-results/observation-parameters.html"
                 class="otherLinkColour"
                 >ObservationParameters</a
               >
-            </li>
+            </li> -->
             <li>
               <a
                 href="{{ site.dcv_js_api }}core/basic-structures/original-image-result-item.html"
@@ -852,13 +859,13 @@
                 >SectionType</a
               >
             </li>
-            <li>
+            <!-- <li>
               <a
                 href="{{ site.enums }}core/transform-matrix-type.html?lang=js"
                 class="otherLinkColour"
                 >TransformMatrixType</a
               >
-            </li>
+            </li> -->
           </ul>
         </li>
       </ul>
