update to internal commit 5eb1e240

--- a/_includes/sidelist-programming/programming-javascript.html
+++ b/_includes/sidelist-programming/programming-javascript.html
@@ -165,6 +165,13 @@
             </li>
             <li>
               <a
+                href="{{ site.dcv_js_api }}capture-vision-router/preset-templates.html"
+                class="otherLinkColour"
+                >Preset Template</a
+              >
+            </li>
+            <li>
+              <a
                 href="{{ site.dcv_js_api }}capture-vision-router/intermediate-result.html"
                 class="otherLinkColour"
                 >Intermediate Result</a
