update to internal commit fd05235c

--- a/_includes/sidelist-programming/programming-javascript-v10.0.21.html
+++ b/_includes/sidelist-programming/programming-javascript-v10.0.21.html
@@ -167,7 +167,7 @@
               <a
                 href="{{ site.dcv_js_api }}capture-vision-router/preset-templates.html"
                 class="otherLinkColour"
-                >Preset Templates</a
+                >Preset Template</a
               >
             </li>
             <li>
@@ -222,13 +222,6 @@
                 >ImageSourceStateListener</a
               >
             </li> -->
-            <li>
-              <a
-                href="{{ site.dcv_js_api }}capture-vision-router/interfaces/captured-result.html"
-                class="otherLinkColour"
-                >CapturedResult</a
-              >
-            </li>
             <li>
               <a
                 href="{{ site.dcv_js_api }}capture-vision-router/interfaces/simplified-capture-vision-settings.html"
@@ -293,13 +286,6 @@
             </li>
             <li>
               <a
-                href="{{ site.js_api }}interfaces/candidate-barcode-zone.html"
-                class="otherLinkColour"
-                >CandidateBarcodeZone</a
-              >
-            </li>
-            <li>
-              <a
                 href="{{ site.js_api }}interfaces/candidate-barcode-zones-unit.html"
                 class="otherLinkColour"
                 >CandidateBarcodeZonesUnit</a
@@ -338,13 +324,6 @@
                 href="{{ site.js_api }}interfaces/decoded-barcodes-unit.html"
                 class="otherLinkColour"
                 >DecodedBarcodesUnit</a
-              >
-            </li>
-            <li>
-              <a
-                href="{{ site.js_api }}interfaces/deformation-resisted-barcode.html"
-                class="otherLinkColour"
-                >DeformationResistedBarcode</a
               >
             </li>
             <li>
@@ -562,6 +541,13 @@
             </li>
             <li>
               <a
+                href="{{ site.dcv_js_api }}core/basic-structures/captured-result.html"
+                class="otherLinkColour"
+                >CapturedResult</a
+              >
+            </li>
+            <li>
+              <a
                 href="{{ site.dcv_js_api }}core/basic-structures/captured-result-item.html"
                 class="otherLinkColour"
                 >CapturedResultItem</a
@@ -679,13 +665,13 @@
                 >LineSegment</a
               >
             </li>
-           <li>
+            <!-- <li>
               <a
                 href="{{ site.dcv_js_api }}core/intermediate-results/observation-parameters.html"
                 class="otherLinkColour"
                 >ObservationParameters</a
               >
-            </li>
+            </li> -->
             <li>
               <a
                 href="{{ site.dcv_js_api }}core/basic-structures/original-image-result-item.html"
@@ -758,6 +744,13 @@
             </li>
             <li>
               <a
+                href="{{ site.dcv_js_api }}core/intermediate-results/text-zones-unit.html"
+                class="otherLinkColour"
+                >TextZonesUnit</a
+              >
+            </li>
+            <li>
+              <a
                 href="{{ site.dcv_js_api }}core/intermediate-results/texture-detection-result-unit.html"
                 class="otherLinkColour"
                 >TextureDetectionResultUnit</a
@@ -775,20 +768,6 @@
                 href="{{ site.dcv_js_api }}core/intermediate-results/texture-removed-grayscale-image-unit.html"
                 class="otherLinkColour"
                 >TextureRemovedGrayscaleImageUnit</a
-              >
-            </li>
-            <li>
-              <a
-                href="{{ site.dcv_js_api }}core/basic-structures/text-zone.html"
-                class="otherLinkColour"
-                >TextZone</a
-              >
-            </li>
-            <li>
-              <a
-                href="{{ site.dcv_js_api }}core/intermediate-results/text-zones-unit.html"
-                class="otherLinkColour"
-                >TextZonesUnit</a
               >
             </li>
             <li>
