--- a/_includes/sidelist-programming/programming-javascript.html
+++ b/_includes/sidelist-programming/programming-javascript.html
@@ -12,13 +12,91 @@
         >Get Started</a
       >
     </li>
+    <li><a href="{{ site.js }}user-guide/explore-features/index.html" class="otherLinkColour">Explore
+        Features</a>
+      <ul>
+        <li><a class="otherLinkColour">Basic Features</a>
+          <ul>
+            <li><a href="{{ site.features }}barcode-formats-and-count.html?lang=js" class="otherLinkColour">Specify barcode
+                formats and
+                count</a></li>
+            <li><a href="{{ site.features }}barcode-scan-region.html?lang=js" class="otherLinkColour">Read a
+                specific area/region</a></li>
+            <!-- <li><a href="{{ site.features }}customize-the-ui.html?lang=js" class="otherLinkColour">Customize
+                the UI</a></li> -->
+          </ul>
+        </li>
+        <li><a class="otherLinkColour">Handle Different Cases</a>
+          <ul>
+            <li><a href="{{ site.features }}read-inverted-barcodes.html?lang=js" class="otherLinkColour">Read inverted
+                barcodes</a></li>
+            <li><a href="{{ site.features }}read-deformed-barcodes.html?lang=js" class="otherLinkColour">Read deformed
+                barcodes</a></li>
+            <li><a href="{{ site.features }}read-incomplete-barcodes.html?lang=js" class="otherLinkColour">Read incomplete
+                barcodes</a>
+            </li>
+            <li><a href="{{ site.features }}read-dense-barcodes.html?lang=js" class="otherLinkColour">Read
+                dense barcodes</a></li>
+            <li><a href="{{ site.features }}read-a-large-image.html?lang=js" class="otherLinkColour">Read
+                barcodes from a large image</a></li>
+            <li><a href="{{ site.features }}read-barcodes-with-small-module-size.html?lang=js" class="otherLinkColour">Read
+                barcodes with small module
+                size</a></li>
+            <li><a href="{{ site.features }}read-barcodes-with-imbalanced-colour.html?lang=js" class="otherLinkColour">Read
+                images with imbalanced
+                colors</a></li>
+            <li><a href="{{ site.features }}read-barcodes-with-uneven-lighting.html?lang=js" class="otherLinkColour">Read
+                images with uneven
+                lighting</a></li>
+            <li><a href="{{ site.features }}read-images-with-texture.html?lang=js" class="otherLinkColour">Read images with
+                texture</a>
+            </li>
+            <li><a href="{{ site.features }}read-images-with-lots-of-text.html?lang=js" class="otherLinkColour">Read images
+                with lots of
+                text</a></li>
+            <li><a href="{{ site.features }}preprocess-images.html?lang=js" class="otherLinkColour">Preprocess images to
+                read
+                difficult barcodes</a></li>
+          </ul>
+        </li>
+        <li><a class="otherLinkColour">Barcode Results</a>
+          <ul>
+            <li><a href="{{ site.features }}get-confidence-rotation.html?lang=js" class="otherLinkColour">Get barcode
+                confidence and
+                rotation</a></li>
+            <li><a href="{{ site.features }}get-barcode-location.html?lang=js" class="otherLinkColour">Get
+                barcode location</a></li>
+            <li><a href="{{ site.features }}get-detailed-info.html?lang=js" class="otherLinkColour">Get
+                detailed barcode information</a></li>
+            <li><a href="{{ site.features }}filter-and-sort.html?lang=js" class="otherLinkColour">Filter and
+                sort decoding results</a></li>
+            <!-- <li><a href="{{ site.features }}use-intermidiate-results.html?lang=js" class="otherLinkColour">Use intermediate
+                results</a>
+            </li> -->
+          </ul>
+        </li>
+        <li><a class="otherLinkColour">Advanced Features</a>
+          <ul>
+            <!-- <li><a href="{{ site.features }}control-terminate-phase.html?lang=js" class="otherLinkColour">Control when to
+                terminate a
+                decoding process</a></li> -->
+            <li><a href="{{ site.features }}use-runtimesettings-or-templates.html?lang=js" class="otherLinkColour">Use
+              SimplifiedCaptureVisionSettings or
+                Templates</a></li>
+            <li><a href="{{ site.features }}use-format-specific-configuration.html?lang=js" class="otherLinkColour">Use
+                format specific
+                configurations</a></li>
+          </ul>
+        </li>
+      </ul>
+    </li>
   </ul>
 </li>
 <li>
   <a href="{{ site.js }}samples-demos/index.html" class="otherLinkColour"
     >Samples and Demos</a
   >
-  <ul>
+  <!-- <ul>
     <li>
       <a
         target="_blank"
@@ -117,7 +195,7 @@
         >Official Online Demo &nearrow;</a
       >
     </li>
-  </ul>
+  </ul> -->
 </li>
 <li lang="javascript">
   <a href="{{ site.js_api }}index.html" class="otherLinkColour"
