--- a/_includes/sidelist-programming/programming-javascript.html
+++ b/_includes/sidelist-programming/programming-javascript.html
@@ -1417,11 +1417,7 @@
         >Is HTTPS absolutely required?</a
       >
     </li>
-    <li>
-      <a href="{{ site.js }}faq/use-of-onFrameRead-and-onUnduplicateRead.html"
-        >When to use onFrameRead and when to use onUniqueRead?</a
-      >
-    </li>
+
     <li>
       <a href="{{ site.js }}faq/call-loadWasm-proactively.html"
         >Do we have to call loadWasm proactively?</a
@@ -1429,9 +1425,8 @@
     </li>
     <li>
       <a
-        href="{{ site.js }}faq/differences-between-updateScanSettings-updateVideoSettings-and-updateRuntimeSettings.html"
-        >Differences between
-        updateScanSettings/updateVideoSettings/updateRuntimeSettings?</a
+        href="{{ site.js }}faq/barcode-reader-docs-js/programming/javascript/faq/How-to-use-initSettings-getSimplifiedSettings-updateSettings.html"
+        >How to use initSettings/getSimplifiedSettings/updateSettings?</a
       >
     </li>
     <li>
@@ -1477,11 +1472,6 @@
     <li>
       <a href="{{ site.js }}faq/formats-supported-for-existing-files.html"
         >Formats supported when reading barcodes from files in local memory?</a
-      >
-    </li>
-    <li>
-      <a href="{{ site.js }}faq/read-text-from-barcode-image.html"
-        >How to read the text info usually located around a barcode image?</a
       >
     </li>
     <li>
