update to internal commit 78e8c784

--- a/_includes/sidelist-programming/programming-javascript.html
+++ b/_includes/sidelist-programming/programming-javascript.html
@@ -1417,7 +1417,11 @@
         >Is HTTPS absolutely required?</a
       >
     </li>
-
+    <li>
+      <a href="{{ site.js }}faq/use-of-onFrameRead-and-onUnduplicateRead.html"
+        >When to use onFrameRead and when to use onUniqueRead?</a
+      >
+    </li>
     <li>
       <a href="{{ site.js }}faq/call-loadWasm-proactively.html"
         >Do we have to call loadWasm proactively?</a
@@ -1425,8 +1429,9 @@
     </li>
     <li>
       <a
-        href="{{ site.js }}faq/barcode-reader-docs-js/programming/javascript/faq/How-to-use-initSettings-getSimplifiedSettings-updateSettings.html"
-        >How to use initSettings/getSimplifiedSettings/updateSettings?</a
+        href="{{ site.js }}faq/differences-between-updateScanSettings-updateVideoSettings-and-updateRuntimeSettings.html"
+        >Differences between
+        updateScanSettings/updateVideoSettings/updateRuntimeSettings?</a
       >
     </li>
     <li>
@@ -1472,6 +1477,11 @@
     <li>
       <a href="{{ site.js }}faq/formats-supported-for-existing-files.html"
         >Formats supported when reading barcodes from files in local memory?</a
+      >
+    </li>
+    <li>
+      <a href="{{ site.js }}faq/read-text-from-barcode-image.html"
+        >How to read the text info usually located around a barcode image?</a
       >
     </li>
     <li>
