--- a/_includes/dbrNav.html
+++ b/_includes/dbrNav.html
@@ -44,9 +44,12 @@
                                 <li class="item"><a class="all-resources f16 mt20 orangeLink" href="https://www.dynamsoft.com/barcode-reader/resources/">See All resources ></a></li>
                             </ul>
                         </li>
-                        <li class="item textUpperCase buy"><a href="https://www.dynamsoft.com/store/dynamsoft-barcode-reader/">Buy</a></li>
+                        <li class="item">
+                            <a class="textUpperCase" href="https://demo.dynamsoft.com/barcode-reader-js/">Try Online Demo</a>
+                        </li>
                     </ul>
-                    <a class="downloadBtn fr hide-lg textUpperCase" href="https://www.dynamsoft.com/barcode-reader/downloads/">Download<span> Free Trial</span></a>
+                    <a href="https://www.dynamsoft.com/store/dynamsoft-barcode-reader/" class="downloadBtn fr">Get Pricing</a>
+                    <a href="https://www.dynamsoft.com/barcode-reader/downloads/" target="_blank" class="downloadBtn borderBtn fr">Download <span class="hide-md">30-Day Trial</span></a>
                 </div>
             </div>
         </div>
