update to internal commit 58e47e03

--- a/_includes/sidelist-programming/programming-javascript.html
+++ b/_includes/sidelist-programming/programming-javascript.html
@@ -878,7 +878,7 @@
         </li>
       </ul>
     </li>
-    <!-- DCP -->
+    <!-- DCP
     <li>
       <a
         href="{{ site.dcp_js_api }}code-parser-module.html"
@@ -948,7 +948,7 @@
           </ul>
         </li>
       </ul>
-    </li>   
+    </li>    -->
     <!-- License -->
     <li>
       <a
