update to internal commit b8d4d4f6

--- a/_includes/sidelist-programming/programming-javascript.html
+++ b/_includes/sidelist-programming/programming-javascript.html
@@ -43,8 +43,13 @@
                 >Read a specific area/region</a
               >
             </li>
-            <!-- <li><a href="{{ site.features }}customize-the-ui.html?lang=js" class="otherLinkColour">Customize
-                the UI</a></li> -->
+            <li>
+              <a 
+                href="{{ site.features }}ui-customization-js.html?lang=js" 
+                class="otherLinkColour"
+                >Customize the UI</a
+              >
+            </li>
           </ul>
         </li>
         <li>
@@ -1656,7 +1661,7 @@
     </li>
   </ul>
 </li>
-<li class="category">OTHERS</li>
+<!-- <li class="category">OTHERS</li>
 <li>
   <a
     target="_blank"
@@ -1664,4 +1669,4 @@
     class="otherLinkColour refreshLink"
     >Develop for Mobile or Server/Desktop</a
   >
-</li>
+</li> -->
