--- a/_includes/sidelist-programming/sidelist-parameter-reference.html
+++ b/_includes/sidelist-programming/sidelist-parameter-reference.html
@@ -1,5 +1,5 @@
 <li lang="javascript">
-    <a href="{{ site.dcvb_parameter }}reference/index.html" class="otherLinkColour"
+    <a href="{{ site.parameters }}reference/index.html" class="otherLinkColour"
       >Parameter Reference</a
     >
     <ul>
