--- a/_includes/sidelist-programming/programming-javascript.html
+++ b/_includes/sidelist-programming/programming-javascript.html
@@ -1656,7 +1656,8 @@
     </li>
   </ul>
 </li>
-<li class="category">OTHERS</li>
+<li lang="javascript"><a href="{{ site.license_activation }}index.html" class="otherLinkColour">License Initialization</a></li>
+<!--<li class="category">OTHERS</li>
 <li>
   <a
     target="_blank"
@@ -1664,4 +1665,4 @@
     class="otherLinkColour refreshLink"
     >Develop for Mobile or Server/Desktop</a
   >
-</li>
+</li>-->
