--- a/_includes/sidelist-programming/programming-javascript.html
+++ b/_includes/sidelist-programming/programming-javascript.html
@@ -1661,6 +1661,7 @@
     </li>
   </ul>
 </li>
+<li lang="javascript"><a href="{{ site.license_activation }}index.html" class="otherLinkColour">License Initialization</a></li>
 <!-- <li class="category">OTHERS</li>
 <li>
   <a
