update to internal commit 2e9a93f6

--- a/_includes/sidelist-programming/programming-javascript.html
+++ b/_includes/sidelist-programming/programming-javascript.html
@@ -1662,3 +1662,12 @@
   </ul>
 </li>
 <li lang="javascript"><a href="{{ site.license_activation }}index.html" class="otherLinkColour">License Initialization</a></li>
+<!-- <li class="category">OTHERS</li>
+<li>
+  <a
+    target="_blank"
+    href="{{ site.introduction }}index.html"
+    class="otherLinkColour refreshLink"
+    >Develop for Mobile or Server/Desktop</a
+  >
+</li> -->
