--- a/_includes/sidelist-programming/sidelist-parameter-reference.html
+++ b/_includes/sidelist-programming/sidelist-parameter-reference.html
@@ -24,13 +24,13 @@
               <li><a href="{{ site.dcvb_parameters }}target-roi-def/task-setting-name-array.html" class="otherLinkColour">TaskSettingNameArray</a></li>
           </ul>
       </li>
-      <li><a href="{{ site.dcvb_parameters }}semantic-processing/" class="otherLinkColour">Semantic Processing</a>
+      <!-- <li><a href="{{ site.dcvb_parameters }}semantic-processing/" class="otherLinkColour">Semantic Processing</a>
           <ul>
               <li><a href="{{ site.dcvb_parameters }}semantic-processing/name.html" class="otherLinkColour">Name</a></li>
               <li><a href="{{ site.dcvb_parameters }}semantic-processing/reference-object-filter.html" class="otherLinkColour">ReferenceObjectFilter</a></li>
               <li><a href="{{ site.dcvb_parameters }}semantic-processing/task-setting-name-array.html" class="otherLinkColour">TaskSettingNameArray</a></li>
           </ul>
-      </li>
+      </li> -->
       <li><a href="{{ site.dcvb_parameters }}barcode-reader-task-settings/" class="otherLinkColour ">Barcode Reader Task Settings</a>
           <ul>
               <li><a href="{{ site.dcvb_parameters }}barcode-reader-task-settings/barcode-colour-modes.html" class="otherLinkColour">BarcodeColourModes</a></li>
@@ -171,13 +171,13 @@
               <li><a href="{{ site.dcvb_parameters }}barcode-format-specification/verify-check-digit.html" class="otherLinkColour">VerifyCheckDigit</a></li>
           </ul>
       </li>
-      <li><a href="{{ site.dcvb_parameters }}code-parser-task-settings/" class="otherLinkColour ">Code Parser Task Settings</a>
+      <!-- <li><a href="{{ site.dcvb_parameters }}code-parser-task-settings/" class="otherLinkColour ">Code Parser Task Settings</a>
           <ul>
               <li><a href="{{ site.dcvb_parameters }}code-parser-task-settings/code-specifications.html" class="otherLinkColour">CodeSpecifications</a></li>
               <li><a href="{{ site.dcvb_parameters }}code-parser-task-settings/name.html" class="otherLinkColour">Name</a></li>
               <li><a href="{{ site.dcvb_parameters }}code-parser-task-settings/resources-path.html" class="otherLinkColour">ResourcesPath</a></li>
           </ul>
-      </li>
+      </li> -->
       <li><a href="{{ site.dcvb_parameters }}image-source-options/" class="otherLinkColour ">Image Source</a>
           <ul>
               <li><a href="{{ site.dcvb_parameters }}image-source-options/directory-path.html" class="otherLinkColour">DirectoryPath</a></li>
