update to internal commit d88bf892

--- a/_includes/sidelist-programming/programming-javascript.html
+++ b/_includes/sidelist-programming/programming-javascript.html
@@ -1659,6 +1659,16 @@
         barcodes via video in iOS 16.7 or 17?</a
       >
     </li>
+    <li>
+      <a href="{{ site.js }}faq/remove-duplicates.html"
+        >How to Reduce Duplicate Scans and Optimize Scan Usage?</a
+      >
+    </li>
+    <li>
+      <a href="{{ site.js }}faq/webcam-support-dense.html"
+        >Why isn't my webcam reading the barcode on my driver's license or ID card?</a
+      >
+    </li>
   </ul>
 </li>
 <li lang="javascript"><a href="{{ site.license_activation }}index.html" class="otherLinkColour">License Initialization</a></li>
