update to internal commit d766e71f

--- a/_includes/sidelist-programming/programming-javascript.html
+++ b/_includes/sidelist-programming/programming-javascript.html
@@ -1669,6 +1669,11 @@
         >Why isn't my webcam reading the barcode on my driver's license or ID card?</a
       >
     </li>
+    <li>
+      <a href="{{ site.js }}faq/system-requirement.html"
+        >What are the system requirements for running the latest version of Dynamsoft Barcode Reader?</a
+      >
+    </li>
   </ul>
 </li>
 <li lang="javascript"><a href="{{ site.license_activation }}index.html" class="otherLinkColour">License Initialization</a></li>
