--- a/_includes/sidelist-programming/programming-javascript-v10.0.21.html
+++ b/_includes/sidelist-programming/programming-javascript-v10.0.21.html
@@ -1150,7 +1150,7 @@
     </li>
     <li>
       <a href="{{ site.js }}faq/enable-supported-barcode-format.html"
-        >How to Enable Specific Barcode Formats with Your License</a>
+        >How to Enable Specific Barcode Formats with Your License?</a>
     </li>
   </ul>
 </li>
