--- a/_includes/sidelist-programming/programming-javascript.html
+++ b/_includes/sidelist-programming/programming-javascript.html
@@ -1674,6 +1674,10 @@
         >What are the system requirements for running the latest version of Dynamsoft Barcode Reader?</a
       >
     </li>
+    <li>
+      <a href="{{ site.js }}faq/enable-supported-barcode-format.html"
+        >How to Enable Specific Barcode Formats with Your License?</a>
+    </li>
   </ul>
 </li>
 <li lang="javascript"><a href="{{ site.license_activation }}index.html" class="otherLinkColour">License Initialization</a></li>
